--- a/style.css
+++ b/style.css
@@ -1,41 +1,31 @@
-
-*{
-margin: 2;
-padding: 3;
-box-sizing: border-box;
+header {
+    background-color: rgb(0, 204, 255);
+    color:black;
+    padding: 1rem 0;
+    border-bottom: 8px solid rgb(187, 238, 255) ;
 }
-body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(100deg, #4effff, #f9d4f9 );
+
+nav ul {
+    list-style:none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+nav a{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
     color:rgb(255, 255, 255);
-    padding: 220px;
-    text-align: center;
+    text-decoration:underline;
+    transition: color 0,5s ease;
+}
+nav a:hover{
+    color: blue;
 }
 
-.container{
-background: #00ccff;
-border: 2px solid #fffefe;
-border-radius: 20px;
-box-shadow: 0 10px 25px rgba (0,0,0,0.2) ;
-max-width: 700px;
-margin: auto;
-padding: 30px;
-animation: fadeIn 2s ease-in-out;
-}
 
-h2,h3 {
-color: #ffffff;
-margin-bottom: 40px;
-}
 
-input [type="text"] ,
-input [type="password"],
-input [type="number"] {
-width: 90%;
-padding: 20px;
-margin: 20px 0;
-border: 80px solid #138f98;
-border-radius: 8px;
-font-size: 16px;
-}
+
+
 
